--- a/index.html
+++ b/index.html
@@ -391,23 +391,23 @@
         //Sửa ảnh và lời nhắn ở đây
         const messages = [
             {
-                img: "./assets/a1.jpg", //Thay ảnh
+                img: "qtkd6.ijp", //Thay ảnh
                 text: "Chúc bạn luôn vui vẻ, xinh đẹp và ngập tràn yêu thương!" //Thay lời nhắn
             },
             {
-                img: "./assets/a2.jpg",
+                img: "qtkd6.ijp",
                 text: "Mỗi ngày của bạn đều là một đoá hoa nở rộ."
             },
             {
-                img: "./assets/a3.jpg",
+                img: "qtkd6.ijp",
                 text: "Cảm ơn bạn vì đã luôn mạnh mẽ và tuyệt vời như thế!"
             },
             {
-                img: "./assets/a4.jpg",
+                img: "qtkd6.ijp",
                 text: "Chúc bạn một ngày 20/10 thật hạnh phúc và trọn vẹn! "
             },
             {
-                img: "./assets/a5.jpg",
+                img: "qtkd6.ijp",
                 text: "Bạn là món quà tuyệt vời nhất mà cuộc sống mang lại! "
             }
         ];
@@ -513,5 +513,6 @@
     </script>
 
 </body>
+
 
 </html>
