--- a/index.html
+++ b/index.html
@@ -391,23 +391,23 @@
         //Sửa ảnh và lời nhắn ở đây
         const messages = [
             {
-                img: "qtkd6.ijp", //Thay ảnh
+                img: "qtkd6.jpg", //Thay ảnh
                 text: "Chúc bạn luôn vui vẻ, xinh đẹp và ngập tràn yêu thương!" //Thay lời nhắn
             },
             {
-                img: "qtkd6.ijp",
+                img: "qtkd6.jpg",
                 text: "Mỗi ngày của bạn đều là một đoá hoa nở rộ."
             },
             {
-                img: "qtkd6.ijp",
+                img: "qtkd6.jpg",
                 text: "Cảm ơn bạn vì đã luôn mạnh mẽ và tuyệt vời như thế!"
             },
             {
-                img: "qtkd6.ijp",
+                img: "qtkd6.jpg",
                 text: "Chúc bạn một ngày 20/10 thật hạnh phúc và trọn vẹn! "
             },
             {
-                img: "qtkd6.ijp",
+                img: "qtkd6.jpg",
                 text: "Bạn là món quà tuyệt vời nhất mà cuộc sống mang lại! "
             }
         ];
@@ -516,3 +516,4 @@
 
 
 </html>
+
