--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
         <span id="centerText">
             Ngày Phụ nữ Việt Nam<br> <!-- Sử lời nhắn hiển thị đầu ở đây-->
             Mong bạn luôn rạng rỡ như những bó hoa!
+            Hãy chọn một lá thư
         </span>
     </div>
 
@@ -516,6 +517,7 @@
 
 
 </html>
+
 
 
 
