--- a/index.html
+++ b/index.html
@@ -368,8 +368,7 @@
         <strong>Chúc mừng 20-10</strong> <!--Sửa tiêu đề chúc mừng ở đây-->
         <span id="centerText">
             Ngày Phụ nữ Việt Nam<br> <!-- Sử lời nhắn hiển thị đầu ở đây-->
-            Mong bạn luôn rạng rỡ như những bó hoa!
-            
+            Mong bạn luôn rạng rỡ như những bó hoa!<br>
             Hãy chọn một lá thư
         </span>
     </div>
@@ -518,6 +517,7 @@
 
 
 </html>
+
 
 
 
